@@ -72,11 +72,11 @@ displayed in the screen. By default, it sets to true for display</p>
 
 
 <ul>
-<li><p><code>subg</code>: an induced subgraph, an object of class &quot;igraph&quot;. In
-addition to the original attributes to nodes and edges, the return
-subgraph is also appended by two node attributes: 1) &quot;anno&quot; containing
-a list of variants/genes (with numeric values as elements); 2) &quot;IC&quot;
-standing for information content defined as negative 10-based
+<li><p><code>subg</code>: an induced/propagated subgraph, an object of class
+&quot;igraph&quot;. In addition to the original attributes to nodes and edges,
+the return subgraph is also appended by two node attributes: 1) &quot;anno&quot;
+containing a list of variants/genes (with numeric values as elements);
+2) &quot;IC&quot; standing for information content defined as negative 10-based
 log-transformed frequency of variants/genes annotated to that term.
 </p>
 </li></ul>
@@ -119,7 +119,7 @@ vids &lt;- V(ig)[unique(unlist(neighs.out))]$name
 g &lt;- igraph::induced.subgraph(ig, vids=vids)
 
 ################
-# 2a) load GWAS SNPs annotated by EF (an object of class "dgCMatrix" storing a spare matrix)
+# 2a) load GWAS SNPs annotated by EF (an object of class "dgCMatrix" storing a sparse matrix)
 annotation &lt;- xRDataLoader(RData='GWAS2EF',
 RData.location=RData.location)
 ## only significant
@@ -151,7 +151,7 @@ xVisInterp(ls_xyz, nD="auto", image=TRUE)
 
 ################
 3a) load ChEMBL targets annotated by EF (an object of class "dgCMatrix"
-storing a spare matrix)
+storing a sparse matrix)
 annotation &lt;- xRDataLoader(RData='Target2EF',
 RData.location=RData.location)
 ## only approved (phase=4)
