@@ -6,7 +6,9 @@ NEW FEATURES
     o Add a new function 'xVisInterp' for irregular data interpolation and visualisation
     
     o Populate annotations
-    
+
+    o Modify 'xSymbol2GeneID' allowing for converting into gene info
+        
     
 CHANGES IN VERSION 1.0.9
 -----------------------
